# zero_to_production_rust_book

./: .env  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yml  postmark_mock.json  spec.yaml
.github/workflows/: coverage.yml
.sqlx/: query-272de93a3206f105e2bfdae685c2cad9b67fd456caa9196c30746fe7fa710e2e.json  query-8e64cebe96717152cf43e59d1e0c63f965f9681b950a030dc1da7c4cff65000c.json  query-bdcd5fc3132b671c5def0e8b4dcf5d275e5e340bb23940aa941de926a4864518.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250520142455_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/damain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_id.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
