[package]
name = "zero_to_production_rust_book"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.10.2"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.45.0" }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = { version = "0.15.11" , features = ["default", "yaml"]}
uuid = { version = "1.16.0", features = ["v4"] }


[dev-dependencies]
reqwest = "0.12.15"
