[package]
name = "zero_to_production_rust_book"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.10.2"
tokio = { features = ["macros", "rt-multi-thread", "rt"], version = "1.45.0" }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-native-tls"] }
config = { version = "0.15.11" , features = ["default", "yaml"]}
uuid = { version = "1.16.0", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "fmt"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
dotenv = "0.15.0"
secrecy = { version = "0.10.3" , features = ["serde"]}
tracing-actix-web = "0.7.18"
tracing-opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.29.0", features = ["default", "serde"] }
opentelemetry = { version = "0.29.1"}
opentelemetry-otlp = { version= "0.29.0", features = ["tonic", "metrics", "grpc-tonic"] }
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = { version = "0.20.0" }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde_json = "1.0.140"

[dev-dependencies]
fake = "4.3.0"
proptest = "1.6.0"
wiremock = "0.6.3"
